--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#4A855600</color>
+    <color name="colorPrimaryDark">#4A855600</color>
+<!--    <color name="colorAccent">#00EC2786</color>-->
     <color name="colorAccent">#D81B60</color>
 </resources>
