--- a/android/app/src/main/res/layout/activity_list.xml
+++ b/android/app/src/main/res/layout/activity_list.xml
@@ -1,9 +1,117 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListActivity">
+    android:orientation="vertical"
+    tools:context=".calendar.ListActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:id="@+id/rl_tool"
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:layout_height="52dp"
+        android:background="#fff">
+
+        <TextView
+            android:id="@+id/tv_month_day"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:paddingStart="16dp"
+            android:textColor="#000000"
+            android:textSize="26sp"
+            android:textStyle="bold"
+            android:text="4月11日"
+            tools:ignore="RtlSymmetry" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:paddingBottom="12dp"
+            android:paddingLeft="6dp"
+            android:paddingRight="6dp"
+            android:paddingTop="12dp"
+
+            tools:ignore="RelativeOverlap">
+
+            <TextView
+                android:id="@+id/tv_year"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:textColor="#000000"
+                android:textSize="10sp"
+                android:text="2020"
+                tools:ignore="SmallSp" />
+
+            <TextView
+                android:id="@+id/tv_lunar"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:textColor="#000000"
+                android:textSize="10sp"
+                android:text="test"
+                tools:ignore="SmallSp" />
+        </LinearLayout>
+    </LinearLayout>
+
+        <com.haibin.calendarview.CalendarLayout
+            android:id="@+id/calendarLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:background="#fff"
+            app:calendar_content_view_id="@+id/recyclerView">
+
+            <com.haibin.calendarview.CalendarView
+                android:id="@+id/calendarView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#fff"
+                app:current_month_text_color="#333333"
+                app:current_month_lunar_text_color="#CFCFCF"
+                app:min_year="2019"
+                app:max_year="2030"
+                app:other_month_text_color="#e1e1e1"
+                app:other_month_lunar_text_color="#e1e1e1"
+                app:scheme_text="假"
+                app:scheme_text_color="#333"
+                app:scheme_theme_color="#128c4b"
+                app:selected_lunar_text_color="#CFCFCF"
+                app:month_view="com.gang.notodo.calendar.IndexMonthView"
+                app:week_view="com.gang.notodo.calendar.IndexWeekView"
+                app:selected_text_color="#333"
+                app:selected_theme_color="#108cd4"
+                app:week_background="#fff"
+                app:week_text_color="#111"
+                app:year_view_day_text_color="#333333"
+                app:year_view_day_text_size="9sp"
+                app:year_view_month_text_color="#ff0000"
+                app:year_view_month_text_size="20sp"
+                app:year_view_scheme_color="#f17706"/>
+
+
+<!--            <com.haibin.calendarviewproject.group.GroupRecyclerView-->
+<!--                android:id="@+id/recyclerView"-->
+<!--                app:group_background="@color/content_background"-->
+<!--                app:group_center="false"-->
+<!--                app:group_height="42dp"-->
+<!--                app:group_has_header="false"-->
+<!--                app:group_padding_left="16dp"-->
+<!--                app:group_padding_right="16dp"-->
+<!--                app:group_text_size="14sp"-->
+<!--                app:group_text_color="#555555"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:background="@color/content_background" />-->
+        </com.haibin.calendarview.CalendarLayout>
+
+
+
+</android.widget.LinearLayout>
