--- a/android/app/src/main/res/layout/activity_list.xml
+++ b/android/app/src/main/res/layout/activity_list.xml
@@ -77,7 +77,8 @@
                 android:background="#fff"
                 app:current_month_text_color="#333333"
                 app:current_month_lunar_text_color="#CFCFCF"
-                app:min_year="2004"
+                app:min_year="2018"
+                app:max_year="2030"
                 app:other_month_text_color="#e1e1e1"
                 app:scheme_text="假"
                 app:day_text_size="16sp"
