--- a/android/app/src/main/res/layout/activity_calendar.xml
+++ b/android/app/src/main/res/layout/activity_calendar.xml
@@ -108,7 +108,20 @@
             app:year_view_month_text_size="20sp"
             app:year_view_scheme_color="#f17706" />
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:paddingTop="0dp"
+            android:paddingLeft="13dp"
+            android:paddingRight="13dp"
+            android:paddingBottom="10dp"
+
+            android:id="@+id/calendar_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+
     </com.haibin.calendarview.CalendarLayout>
+
+
 
 
 </android.widget.LinearLayout>
