--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -4,4 +4,8 @@
     <color name="colorPrimaryDark">#4A855600</color>
 <!--    <color name="colorAccent">#00EC2786</color>-->
     <color name="colorAccent">#D81B60</color>
+
+    <color name="text_Grey">#c1c1c2</color>
+    <color name="colorWhite">#ffffff</color>
+    <color name="red">#ff0000</color>
 </resources>
