--- a/android/app/src/main/res/layout/activity_add.xml
+++ b/android/app/src/main/res/layout/activity_add.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,44 +7,40 @@
     android:id="@+id/root"
     tools:context=".ui.AddTaskActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingBottom="16dp"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:paddingTop="16dp">
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:orientation="vertical"-->
+<!--        android:paddingBottom="16dp"-->
+<!--        android:paddingLeft="16dp"-->
+<!--        android:paddingRight="16dp"-->
+<!--        android:paddingTop="16dp">-->
 
-        <EditText
-            android:id="@+id/add_task_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="主题"
-            android:maxLines="1"
-            android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+<!--        <EditText-->
+<!--            android:id="@+id/add_task_title"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:hint="主题"-->
+<!--            android:maxLines="1"-->
+<!--            android:textAppearance="@style/TextAppearance.AppCompat.Title" />-->
 
-        <EditText
-            android:id="@+id/add_task_description"
-            android:layout_width="match_parent"
-            android:layout_height="350dp"
-            android:gravity="top"
-            android:hint="描述" />
+<!--        <EditText-->
+<!--            android:id="@+id/add_task_description"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="350dp"-->
+<!--            android:gravity="top"-->
+<!--            android:hint="描述" />-->
 
+<!--    </LinearLayout>-->
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab_edit_task_done"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:src="@drawable/ic_add"
-            app:layout_anchor="@id/root"
-            app:elevation="6dp"
-            app:backgroundTint="#ff0000"
-            android:layout_gravity="end"
-            app:fabSize="normal" />
-
-    </LinearLayout>
-
-
-</LinearLayout>
+<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+<!--        android:id="@+id/fab_edit_task_done"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_gravity="end|bottom"-->
+<!--        android:layout_margin="16dp"-->
+<!--        android:src="@drawable/ic_add"-->
+<!--        app:elevation="8dp"-->
+<!--        app:fabSize="normal"-->
+<!--        app:layout_anchor="@id/calendarLayout" />-->
+</FrameLayout>
