--- a/android/app/src/main/res/layout/activity_calendar.xml
+++ b/android/app/src/main/res/layout/activity_calendar.xml
@@ -3,14 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".ui.calendar.CalendarActivity">
 
     <android.widget.LinearLayout
         android:id="@+id/root"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".ui.calendar.CalendarActivity">
+        >
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolBar"
@@ -130,7 +131,7 @@
     </android.widget.LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab_edit_task_done"
+        android:id="@+id/fab_edit_task_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
