--- a/android/app/src/main/res/layout/activity_add.xml
+++ b/android/app/src/main/res/layout/activity_add.xml
@@ -7,40 +7,40 @@
     android:id="@+id/root"
     tools:context=".ui.AddTaskActivity">
 
-<!--    <LinearLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:orientation="vertical"-->
-<!--        android:paddingBottom="16dp"-->
-<!--        android:paddingLeft="16dp"-->
-<!--        android:paddingRight="16dp"-->
-<!--        android:paddingTop="16dp">-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingBottom="16dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:paddingTop="16dp">
 
-<!--        <EditText-->
-<!--            android:id="@+id/add_task_title"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:hint="主题"-->
-<!--            android:maxLines="1"-->
-<!--            android:textAppearance="@style/TextAppearance.AppCompat.Title" />-->
+        <EditText
+            android:id="@+id/add_task_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="主题"
+            android:maxLines="1"
+            android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
-<!--        <EditText-->
-<!--            android:id="@+id/add_task_description"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="350dp"-->
-<!--            android:gravity="top"-->
-<!--            android:hint="描述" />-->
+        <EditText
+            android:id="@+id/add_task_description"
+            android:layout_width="match_parent"
+            android:layout_height="350dp"
+            android:gravity="top"
+            android:hint="描述" />
 
-<!--    </LinearLayout>-->
+    </LinearLayout>
 
-<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
-<!--        android:id="@+id/fab_edit_task_done"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_gravity="end|bottom"-->
-<!--        android:layout_margin="16dp"-->
-<!--        android:src="@drawable/ic_add"-->
-<!--        app:elevation="8dp"-->
-<!--        app:fabSize="normal"-->
-<!--        app:layout_anchor="@id/calendarLayout" />-->
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_edit_task_done"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_add"
+        app:elevation="8dp"
+        app:fabSize="normal"
+        app:layout_anchor="@id/calendarLayout" />
 </FrameLayout>
