--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -14,6 +14,12 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="tab_style" parent="Widget.Design.TabLayout">
+
+        <item name="tabSelectedTextColor">@android:color/holo_red_light</item>
+        <item name="tabIndicatorColor">@android:color/holo_red_light</item>
+
+    </style>
 
 
 </resources>
