--- a/android/app/src/main/res/layout/activity_list.xml
+++ b/android/app/src/main/res/layout/activity_list.xml
@@ -8,13 +8,13 @@
     android:orientation="vertical"
     tools:context=".ui.ListActivity">
 
-<!--    <androidx.appcompat.widget.Toolbar-->
-<!--        android:id="@+id/toolBar"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:background="@color/colorPrimary"-->
-<!--        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"-->
-<!--        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />-->
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
 
 
     <com.google.android.material.tabs.TabLayout
