--- a/android/app/src/main/res/layout/activity_list.xml
+++ b/android/app/src/main/res/layout/activity_list.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.ListActivity">
+    tools:context=".ui.list.ListActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolBar"
