--- a/android/app/src/main/res/menu/menu_list_item_complete.xml
+++ b/android/app/src/main/res/menu/menu_list_item_complete.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/item_delete"
+        android:id="@+id/item_complete"
         android:title="完成"
         app:showAsAction="never" />
 </menu>
