--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -21,11 +21,37 @@
         android:layout_height="match_parent"
         android:gravity="center">
 
-        <Button
-            android:id="@+id/button_login"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/login" />
+            android:orientation="vertical">
+
+            <EditText
+                android:id="@+id/login_username"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:hint="用户名"
+                android:maxLines="1"
+                android:background="@drawable/textview_border"
+                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+
+            <EditText
+                android:id="@+id/login_password"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:gravity="top"
+                android:background="@drawable/textview_border"
+                android:hint="密码" />
+
+            <Button
+                android:id="@+id/button_login"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/login" />
+        </LinearLayout>
+
+
 
     </RelativeLayout>
 
