--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -30,18 +30,21 @@
                 android:id="@+id/login_username"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
+                android:layout_margin="6dp"
+                android:background="@drawable/textview_border"
                 android:hint="用户名"
                 android:maxLines="1"
-                android:background="@drawable/textview_border"
-                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+                android:padding="10dp" />
 
             <EditText
                 android:id="@+id/login_password"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:gravity="top"
+                android:layout_margin="6dp"
                 android:background="@drawable/textview_border"
-                android:hint="密码" />
+                android:hint="密码"
+                android:maxLines="1"
+                android:padding="10dp" />
 
             <Button
                 android:id="@+id/button_login"
@@ -50,7 +53,6 @@
                 android:layout_gravity="center"
                 android:text="@string/login" />
         </LinearLayout>
-
 
 
     </RelativeLayout>
